# bazel-demo-app

./: .gitignore  BUILD.bazel  WORKSPACE  bazel.sh  go.mod  go.sum
cmd/: BUILD.bazel  main.go
handlers/: BUILD.bazel  handler.go
pkg/greetings/: BUILD.bazel
tools/: gopackagesdriver.sh
tools/bazelisk/: update_bazelish.sh
