load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/dgiacomo/bazel-demo-app
gazelle(name = "gazelle")

# Add a rule to call gazelle and pull in new go dependencies.
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
