load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "handlers",
    srcs = ["handler.go"],
    importpath = "github.com/dgiacomo/bazel-demo-app/handlers",
    visibility = ["//visibility:public"],
    deps = ["@com_github_dgiacomo_bazel_demo_app//pkg/greetings:go_default_library"],
)
